<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pickle</string>
    <string name="action_settings">Settings</string>
    <string name="subtitle"> Decide Better</string>
    <string name="push_message">%s needs to make a decision!</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">New Post</string>
    <string name="title_section3">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="sign_up_text">Don\'t have an account? Sign up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address!</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Oops!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="empty_inbox_label">No new messages!</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We\'re sorry!</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage.</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="video_size_limit_warning">The selected video must be less than 10 MB.</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select a different file.</string>
    <string name="error_file_too_large">The selected file is too large! Select a new file.</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Choose Picture</item>
        <item>Google Images</item>
    </string-array>
    <string-array name="post_choices">
        <item>Subscribe</item>
        <item>Flag</item>
        <item>Remove</item>
    </string-array>
    <string-array name="post_followed_choices">
        <item>Unsubscribe</item>
        <item>Flag</item>
        <item>Remove</item>
    </string-array>
        <string-array name="post_followed_flagged_choices">
        <item>Unsubscribe</item>
        <item>Unflag</item>
        <item>Remove</item>
    </string-array>
    <string-array name="post_flagged_choices">
        <item>Subscribe</item>
        <item>Unflag</item>
        <item>Remove</item>
    </string-array>

    <string name="video_file_size_warning">The selected video must be less than 10 MB.</string>
    <string name="error_opening_file">There was a problem with the selected file.</string>
    <string name="error_file_size_too_large">The selected file is too large! Select a new file.</string>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some friends first!</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file_title">We\'re sorry!</string>
    <string name="success_message">Post Uploaded!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again.</string>
    <string name="title_activity_view_image">Ribbit</string>
    <string name="title_activity_new_post">NewPost</string>
    <string name="next_label">Post</string>
    <string name="title_activity_android_custom_gallery">AndroidCustomGalleryActivity </string>
    <string name="app_id">672772256144790</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Explore</item>
        <item>Create Post</item>
        <item>Following</item>
        <item>Logout</item>
    </string-array>

    <array name="post_colors">
        <item>@color/selected_color_1</item>
        <item>@color/selected_color_2</item>
        <item>@color/selected_color_3</item>
        <item>@color/selected_color_4</item>
        <item>@color/selected_color_5</item>
    </array>
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_new_post</item>
        <item>@drawable/following</item>
        <item>@drawable/action_logout</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="google_image_title">Search Images</string>
    <string name="profile_settings">Edit</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="login_intro">Check out your Facebook profile by logging in with the button below!</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="relationship">Relationship</string>
    <string name="title_activity_comments">CommentsActivity</string>
    <string name="title_activity_add_comment">AddCommentActivity</string>
    <string name="title_activity_votes">VotesActivity</string>
     <string name="Newsfeed">Subscribed</string>

</resources>