<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	
    tools:context=".SignUpActivity"
    style="@style/AuthBackground" >
    
     <LinearLayout
         android:id="@+id/editTextLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginTop="32dp"
         android:background="@android:color/white"
         android:orientation="vertical"
         android:padding="10dp" >

		    <EditText
		        android:id="@+id/userNameField"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
	            android:ems="10"
	            android:textColorHint="@color/light_gray"
	            android:textSize="17sp" 
		        android:hint="@string/username_hint" >
		
		        <requestFocus />
		    </EditText>
		
		    <EditText
		        android:id="@+id/passwordField"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
	            android:textColorHint="@color/light_gray"
	            android:textSize="17sp" 
		        android:ems="10"
		        android:inputType="textPassword"
		        android:hint="@string/password_hint" />
		
		    <EditText
		        android:id="@+id/emailField"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
	            android:textColorHint="@color/light_gray"
	            android:textSize="17sp" 
		        android:ems="10"
		        android:inputType="textEmailAddress"
		        android:hint="@string/email_hint" />
	</LinearLayout>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/editTextLayout"
        android:layout_below="@id/editTextLayout"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:background="@android:color/black"
        android:text="@string/sign_up_button_label"
        android:textColor="@android:color/white" />

</RelativeLayout>