<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AuthBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >

    <Button
        android:id="@+id/facebookLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextLayout"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/fb_button"
        android:padding="10dp"
        android:text="Connect with Facebook"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:text="@string/subtitle"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/editTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="18dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="10dp" >

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.47"
            android:background="@drawable/button_background"
            android:text="@string/login_button_label" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight=".03" />

        <Button
            android:id="@+id/signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/editTextLayout"
            android:layout_below="@+id/editTextLayout"
            android:layout_weight="0.47"
            android:background="@drawable/button_background"
            android:text="Sign Up" />
    </LinearLayout>

</RelativeLayout>